--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                     <path d="M21.3003 2.4439L19.1894 3.59838L21.3003 4.75287L22.4548 6.86376L23.6093 4.75287L25.7202 3.59838L23.6093 2.4439L22.4548 0.333008L21.3003 2.4439ZM13.2707 3.64716C11.3347 4.03999 9.52792 4.91154 8.0154 6.18224C6.50288 7.45294 5.33277 9.0823 4.61194 10.9215C3.8911 12.7608 3.6425 14.7513 3.88883 16.7113C4.13516 18.6714 4.86857 20.5385 6.0221 22.1421C7.17563 23.7458 8.71252 25.035 10.4924 25.8919C12.2724 26.7488 14.2386 27.1462 16.2116 27.0477C18.1846 26.9493 20.1015 26.3581 21.7872 25.3283C23.473 24.2985 24.8739 22.8627 25.8621 21.1522C22.3516 21.1249 18.9943 19.7112 16.5216 17.2191C14.049 14.7271 12.6615 11.3588 12.6617 7.84825C12.6617 6.3996 12.8553 4.98495 13.2707 3.64716ZM0.835938 15.2393C0.835938 7.07514 7.4539 0.457178 15.6181 0.457178H18.1813L16.8982 2.6745C16.0423 4.15271 15.6181 5.91179 15.6181 7.84825C15.6179 9.37616 15.956 10.8852 16.6082 12.2669C17.2605 13.6486 18.2106 14.8687 19.3903 15.8396C20.5701 16.8105 21.9503 17.508 23.4316 17.8822C24.913 18.2564 26.4589 18.2978 27.9582 18.0036L30.4446 17.5202L29.6419 19.9238C27.6833 25.7893 22.1474 30.0215 15.6181 30.0215C7.4539 30.0215 0.835938 23.4035 0.835938 15.2393ZM28.1829 6.98497L29.534 9.45359L32.0026 10.8047L29.534 12.1558L28.1829 14.6244L26.8318 12.1558L24.3632 10.8047L26.8318 9.45359L28.1829 6.98497Z"/>
                 </svg>     
             </button>
+            <button class="hamburgerMenu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
         </header>
 
         <main>
@@ -53,18 +58,15 @@
                 <ul>
                     <li><a href="#">
                         <h2>Huwelijken redden met een app</h2>
-                        <h3>Branding, Concept, UI/UX</h3>
                         <img class="project-img" src="./images/partnerup-project.jpg" alt="">
+                        <h3>Branding, Concept, UI/UX</h3>
                     </a></li>
                     <li><a href="#">
                         <h2>Bordspel voor de voetbal community</h2>
-                        <h3>Branding, Concept, Graphic Design</h3>
                         <img class="project-img" src="./images/voetbal-bordspel.jpg" alt="">
+                        <h3>Branding, Concept, Graphic Design</h3>
                     </a></li>
-                    <li><a href="#">
-                        <h2>Muziek showcasing</h2>
-                        <h3>Front-end, Design</h3>
-                    </a></li>
+                    
                 </ul>
             </section>
 
@@ -101,10 +103,10 @@
         <footer>
             <h3>Contact</h3>
             <a href="mailto:info@manueldenhartog.nl">
-                <h4>Je kunt me bereiken op <span>info@manueldenhartog.nl</span></h4>
-                <svg class="linkIcon" viewBox="0 0 36 37" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <h4>Je kunt me bereiken op <span>info@manueldenhartog.nl</span><span><svg class="linkIcon" viewBox="0 0 36 37" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M14 6.5V10.5H4V32.5H26V22.5H30V34.5C30 35.0304 29.7893 35.5391 29.4142 35.9142C29.0391 36.2893 28.5304 36.5 28 36.5H2C1.46957 36.5 0.960859 36.2893 0.585786 35.9142C0.210714 35.5391 0 35.0304 0 34.5V8.5C0 7.96957 0.210714 7.46086 0.585786 7.08579C0.960859 6.71071 1.46957 6.5 2 6.5H14ZM36 0.5V16.5H32V7.326L16.414 22.914L13.586 20.086L29.17 4.5H20V0.5H36Z"/>
-                </svg>    
+                </svg> </span></h4>
+                   
             </a>
         </footer>
     </div>
@@ -112,5 +114,6 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 
     <script defer src="./scripts/script.js"></script>
+    <script defer src="./scripts/index.js"></script>
 </body>
 </html>
