--- a/dynamo.html
+++ b/dynamo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PartnerUp - Project</title>
+    <title>Dynamo - Project</title>
 
     <link rel="stylesheet" href="./styles/style.css">
 
@@ -51,24 +51,29 @@
         <main>
             <div class="projectWrapper">
                 <div class="projectContainer">
-                    <section class="projectIntro">
+                    <section class="projectIntro"   >
                         <h3>Design Project</h3>
-                        <h1>PartnerUP</h1>
-                        <h3>Branding, Concept, UI/UX</h3>
-                        <img src="./images/project-partnerup/hero-img.jpg" alt="">
+                        <h1>Dynamo</h1>
+                        <h3>Branding, Concept, Graphic Design</h3>
+                        <img src="./images/project-dynamo/spel2.jpg" alt="">
                     </section>
                     <section class="projectContent hidden">
                         <h3>Jaar</h3>
-                        <h3 class="BeigeH3">2023</h3>
+                        <h3 class="BeigeH3">2024</h3>
                         <div class="textContainer">
-                            <p>Een app verzinnen en uitwerken die koppels helpt met het maken van keuzes.  Dit door een gemakkelijke, snelle en uiteraard visueel aantrekklijke app. </p>
-                            <p>Met PartnerUP kunnen partners gemakkelijk samen dates en restaurants vinden zonder uren te discussieren of op google te surfen. De gebruikers zitten beide op hun eigen account en krijgen op een willekeurige volgorde dezelfde voorstellen te zien voor een date idee of restaurants. Als ze beide aangeven hetzelfde idee of restaurant leuk te vinden ontstaat er een match en zijn er weer talloze discussies voorkomen.</p>
-                            <p>Dit project heb ik in mijn eentje ontworpen en bedacht, de uitdaging lag vooral in het maken van een zo simpel mogelijke interface die makkelijk te begrijpen is maar het toch prikkelend te maken.</p>
+                            <p>Een interactief product bedenken om de voetbal community samen te brengen en ook nieuwe mensen uit te nodigen in de voetbal community.</p>
+                            <p>Met Dynamo speel je een voetbalbordspel die zich focust op alle aspecten van voetbal buiten de wedstrijd om, denk aan het maken van transfers, het samenstellen van een team en het overleven van schandalen. Hierbij moet je strategisch nadenken om de top te bereiken en het spel te winnen. Je begint met een budget waarmee je een startersteam opbouwt en dan kan het spel beginnen. Je kunt ervoor kiezen om wedstrijden te spelen of je team te verbeteren door middel van het evenementen bord. Er zijn verschillende evenementen gebaseerd op waargebeurde verhalen die je team een positieve of juist negatieve boost kunnen geven. </p>
+                            <p>Dynamo is een mix van tactiek, spanning en combinatie en het is aan de speler om of slim te investeren of toch een risico te nemen om zo de top te bereiken.  Het doel is simpel: behaal als eerste de top van de Eredivisie.</p>
                         </div>
                         <div class="imgContainer hidden">
-                            <img src="./images/project-partnerup/screens.jpg" alt="">
-                            <img src="./images/project-partnerup/logo.jpg" alt="">
-                            <img src="./images/project-partnerup/in-action.jpg" alt="">
+                            <img src="./images/project-dynamo/speldoos.jpg" alt="">
+                            <img src="./images/project-dynamo/logo.jpg" alt="">
+                            <img src="./images/project-dynamo/spel3.jpg" alt="">
+                        </div>
+                        <p>De uitdaging lag vooral in het ontwikkelen van een simpel concept die leuk en herspeelbaar was en hierbij ook een passende vormgeving te bedenken die zowel voetbal als bordspel uitstraalt. We hebben verschillende ontwerpen geprobeerd en het spel ook geplaytest om te kijken wat het beste werkt, uiteindelijk zijn we op de speelse branding en tactische elementen van Dynamo gekomen.</p>
+                        <div class="imgContainer2 hidden">
+                            <img src="./images/project-dynamo/spel1.jpg" alt="">
+                            <img src="./images/project-dynamo/spel4.jpg" alt="">
                         </div>
                     </section>
                 </div>
@@ -79,10 +84,10 @@
                 <section class="projects">
                     <h3>Design Projecten</h3>
                     <ul>
-                        <li class="hidden"><a href="dynamo.html">
-                            <h2>Bordspel voor de voetbal community</h2>
-                            <img class="project-img" src="./images/voetbal-bordspel.jpg" alt="">
-                            <h3>Branding, Concept, Graphic Design</h3>
+                        <li class="hidden"><a href="partnerup.html">
+                            <h2>Huwelijken redden met een app</h2>
+                            <img class="project-img" src="./images/partnerup-project.jpg" alt="">
+                            <h3>Branding, Concept, UI/UX</h3>
                         </a></li>
                     </ul>
                 </section>
@@ -107,7 +112,6 @@
                         </a></li>
                     </ul>
                 </section>
-            </div>
         </main>
         <footer>
             <h3>Contact</h3>
